<resources>
    <string name="app_name">Task MasterMind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Student</string>
    <string name="nav_header_subtitle">studento@miu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_schedule">Schedule and Assignment</string>
    <string name="menu_note">Note-taking</string>
    <string name="menu_timer">Study Timer</string>
    <string name="menu_grade">Grade Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_task_title_label">Title</string>
    <string name="fragment_task_title_hint">Add a title</string>
    <string name="fragment_task_category_label">Category</string>
    <string name="fragment_task_description_label">Description</string>
    <string name="fragment_task_description_hint">Add a description</string>
    <string name="fragment_task_list_attachment_label">Attachments</string>
    <string name="fragment_task_tap_to_add_attachment_hint">Tap to add attachments</string>
    <string name="fragment_task_header_basic_info">Basic Info</string>
    <string name="fragment_task_header_attachments">Attachments</string>
    <string name="fragment_task_no_items">No attachments</string>
    <string name="fragment_task_snackbar_notice_attachments_options_hint">Long-press an attachment for more options</string>
    <string name="datepicker_cancel">CANCEL</string>
    <string name="datepicker_ok">OK</string>
    <string name="fragment_edit_one_time_reminder_date_title">Date</string>
    <string name="fragment_edit_one_time_reminder_date_hint">Enter a date</string>
    <string name="fragment_edit_one_time_reminder_time_title">Time</string>
    <string name="fragment_edit_one_time_reminder_time_hint">Enter a time</string>
    <string name="fragment_edit_repeating_reminder_date_title">Date</string>
    <string name="fragment_edit_repeating_reminder_date_hint">Enter a date</string>
    <string name="fragment_edit_repeating_reminder_time_title">Time</string>
    <string name="fragment_edit_repeating_reminder_time_hint">Enter a time</string>
    <string name="fragment_edit_repeating_reminder_repeat_title">Repeat</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_every">Every</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_days">Day(s)</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_weeks">Week(s)</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_months">Month(s)</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_years">Year(s)</string>
    <string name="fragment_edit_repeating_reminder_repeat_end_until_date">Until</string>
    <string name="fragment_edit_repeating_reminder_repeat_end_for_x_events_1">For</string>
    <string name="fragment_edit_repeating_reminder_repeat_end_for_x_events_2">event(s)</string>
    <string name="dialog_audio_attachment_options_replace">Replace audio</string>
    <string name="dialog_audio_attachment_options_delete">Delete attachment</string>
    <string name="dialog_text_attachment_options_copy">Copy text</string>
    <string name="dialog_text_attachment_options_edit">Edit text</string>
    <string name="dialog_text_attachment_options_delete">Delete attachment</string>
    <string name="dialog_text_attachment_text_copied_clipboard">\'%1$s\' copied to clipboard</string>
    <string name="dialog_link_attachment_options_copy">Copy link</string>
    <string name="dialog_link_attachment_options_edit">Edit link</string>
    <string name="dialog_link_attachment_options_delete">Delete attachment</string>
    <string name="list_item_attachment_text_hint">Tap to add an item&#8230;</string>
    <string name="dialog_list_attachment_options_copy">Copy list text</string>
    <string name="dialog_list_attachment_options_delete">Delete list</string>
    <string name="dialog_list_item_attachment_options_copy">Copy item text</string>
    <string name="dialog_list_item_attachment_options_edit">Edit item text</string>
    <string name="dialog_list_item_attachment_options_delete">Delete item</string>
    <string name="dialog_image_attachment_options_edit">Edit image</string>
    <string name="dialog_image_attachment_options_delete">Delete attachment</string>
    <string name="image_attachment_snackbar_warning_no_permissons">This app needs camera permissions to continue</string>
    <string name="item_attachment_image_hint">Tap to add an image</string>
    <string name="item_attachment_list_hint">Tap to enter a list</string>
    <string name="item_attachment_text_hint">Tap to enter text</string>
    <string name="item_attachment_audio_hint">Tap to record</string>
    <string name="item_attachment_link_hint">Tap to enter a link</string>
    <string name="home_contextual_menu_delete">Delete</string>
    <string name="home_contextual_menu_done">Done</string>
    <string name="home_contextual_menu_not_done">Not done</string>
    <string name="dialog_record_audio_tap_to_record">Tap to start recording</string>
    <string name="dialog_record_audio_snackbar_error_no_permissions">App needs microphone and storage permissions</string>
    <string name="dialog_record_audio_overwrite_title">Overwrite audio?</string>
    <string name="dialog_record_audio_overwrite_message">Are you sure you want to overwrite this audio?</string>
    <string name="dialog_record_audio_overwrite_positive">Yes</string>
    <string name="dialog_record_audio_overwrite_negative">Cancel</string>
    <string name="dialog_edit_place_title">Edit Place</string>
    <string name="dialog_edit_place_alias_title">Alias</string>
    <string name="dialog_edit_place_address_title">Address</string>
    <string name="dialog_edit_place_cancel">CANCEL</string>
    <string name="dialog_edit_place_ok">OK</string>
    <string name="dialog_edit_text_attachment_title">Edit Text</string>
    <string name="dialog_edit_text_attachment_cancel">CANCEL</string>
    <string name="dialog_edit_text_attachment_ok">OK</string>
    <string name="dialog_edit_text_error_empty_text">Please enter some text</string>
    <string name="dialog_edit_link_attachment_title">Edit Link</string>
    <string name="dialog_edit_link_attachment_cancel">CANCEL</string>
    <string name="dialog_edit_link_attachment_ok">OK</string>
    <string name="dialog_edit_link_attachment_malformed_link">Error, link is invalid</string>
    <string name="dialog_edit_link_error_empty_text">Please enter a valid link</string>
    <string name="dialog_edit_list_item_attachment_title">Edit Item</string>
    <string name="dialog_edit_list_item_attachment_cancel">CANCEL</string>
    <string name="dialog_edit_list_item_attachment_ok">OK</string>
    <string name="dialog_edit_list_item_error_empty_text">Please enter some text</string>
    <string name="dialog_image_source_select_gallery">Gallery</string>
    <string name="dialog_image_source_select_camera">Camera</string>
    <string name="dialog_image_source_select_title">Select a source</string>
    <string name="dialog_image_source_select_cancel">CANCEL</string>
    <string name="error_problem_getting_tasks_from_database">There was an error getting the task list</string>
    <string name="error_problem_updating_task_from_database">There was an error updating the task list</string>
    <string name="error_problem_deleting_tasks_from_database">There was an error deleting the tasks</string>
    <string name="error_problem_updating_tasks_from_database">There was an error updating the tasks</string>
    <string name="error_problem_inserting_reminder">There was a problem inserting the reminder into the database</string>
    <string name="error_invalid_title">Please enter a valid title</string>
    <string name="error_invalid_date">Please enter a valid date</string>
    <string name="error_invalid_time">Please enter a valid time</string>
    <string name="error_invalid_repeat_interval">Please enter a valid repeat interval</string>
    <string name="error_invalid_repeat_events">Please enter a valid repeat event number</string>
    <string name="error_invalid_repeat_until_date">Please enter a valid repeat until date</string>
    <string name="error_repeat_until_date_after_reminder_date">Repeat until date must be after reminder date</string>
    <string name="reminder_saved_successfully">Saving reminder&#8230;</string>
    <string name="error_generic_reminder">There was a problem with the reminder data, please report this error</string>
    <string name="url_market" translatable="false">market://details?id=ve.com.abicelis.remindy</string>
    <string name="url_github" translatable="false">github.com/abicelis/</string>
    <string name="url_website" translatable="false">www.alejandrobicelis.com.ve</string>
    <string name="address_email" translatable="false">alejandro@alejandrobicelis.com.ve</string>
    <string name="service_not_available">Location service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Found address</string>
    <string name="error_unexpected">Unexpected error occurred. Please report this error</string>
    <string name="error_updating_attachment_data">Unexpected error while updating the attachment</string>
    <string name="backup_restore_no_permissions">No permission given, aborting process</string>
    <string name="backup_successful">Data successfully backed up in SD Card</string>
    <string name="backup_not_successful">Couldn\'t back up data</string>
    <string name="backup_failed">Error backing up data</string>
    <string name="restore_successful">Data successfully restored from SD Card</string>
    <string name="restore_not_successful">Backup data not found in SD Card</string>
    <string name="restore_failed">Error restoring data</string>
    <string name="subdirectory_attachments_audio" translatable="false">attachments/audio</string>
    <string name="subdirectory_attachments_image" translatable="false">attachments/image</string>
    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many Geofences</string>
    <string name="geofence_too_many_pending_intents">Too many PendingIntents</string>
    <string name="geofence_transition_invalid_type">Invalid transition type</string>
    <string name="unknown_geofence_error">Unknown Geofence error</string>
    <string name="geofence_snackbar_warning_no_permissons">App needs the location to function properly</string>
    <string name="notification_service_geofence_enter">You are at</string>
    <string name="notification_service_geofence_exit">You just left</string>
    <string name="notification_service_geofence_dwell">You\'ve been a while at</string>
    <string name="notification_big_view_set_done">Done</string>
    <string name="notification_big_view_postpone">Postpone</string>
    <string name="fragment_course_title_label">Course</string>
    <string name="fragment_course_name_label">Name</string>
    <string name="fragment_course_name_label_hint">Enter course name</string>
    <string name="fragment_course_dest_label">Description</string>
    <string name="fragment_course_dest_label_hint">Enter course description</string>
    <string name="fragment_course_professor_label">Professor Name</string>
    <string name="fragment_course_professor_hint">Enter professor name</string>
    <string name="fragment_course_location_label">Location</string>
    <string name="fragment_course_location_hint">Enter location</string>
</resources>