<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/baseline_list_alt_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_grade"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_grade" />
    </group>
</menu>