<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.mastermind.ui.home.HomeFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.mastermind.ui.Note.FragmentNoteTaking"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note_taking" />

   <fragment
       android:id="@+id/nav_grade"
       android:name="com.example.mastermind.ui.Grade.FragmentGradeCaculator"
       android:label="@string/menu_grade"
      tools:layout="@layout/fragment_grade_caculator" />

  <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.mastermind.ui.timer.FragmenTimer"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_fragmen_timer" />
</navigation>