<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.CreateCourseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/fragment_course_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/fragment_course_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:hint="@string/fragment_course_name_label_hint"
                    android:backgroundTint="@color/gray_700"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/fragment_course_dest_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/fragment_course_dest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:hint="@string/fragment_course_dest_label_hint"
                    android:backgroundTint="@color/gray_700"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/fragment_course_professor_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/fragment_course_professor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:hint="@string/fragment_course_professor_hint"
                    android:backgroundTint="@color/gray_700"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/fragment_course_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/fragment_course_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:hint="@string/fragment_course_location_hint"
                    android:backgroundTint="@color/gray_700"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
                <Button
                    android:id="@+id/save_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save"/>

                <Button
                    android:id="@+id/cancel_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="Cancel"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>