<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.CreateScheduleFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/fragment_task_basic_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/fragment_course_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/listCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Select course"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:text="@string/fragment_task_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/fragment_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:hint="@string/fragment_task_title_hint"
                    android:backgroundTint="@color/gray_700"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/fragment_task_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fragment_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="2"
                android:maxLength="70"
                android:hint="@string/fragment_task_description_hint"
                android:backgroundTint="@color/gray_700"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_repeating_reminder_date_title" />
            <EditText
                android:id="@+id/fragment_edit_repeating_reminder_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/fragment_edit_repeating_reminder_date_hint"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_repeating_reminder_time_title" />

            <EditText
                android:id="@+id/fragment_edit_repeating_reminder_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/fragment_edit_repeating_reminder_time_hint"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_task_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fragment_task_add_attachment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:menu_animationDelayPerItem="30"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="6dp"
        app:menu_colorNormal="@color/primary"
        app:menu_colorPressed="@color/primary"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/icon_attachment"
        app:menu_showShadow="false">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragment_task_add_audio_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_audio_fab_mini"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showShadow="false"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragment_task_add_image_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_image_fab_mini"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showShadow="false"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragment_task_add_link_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_link_fab_mini"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showShadow="false"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragment_task_add_text_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_text_fab_mini"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showShadow="false"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragment_task_add_list_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_list_fab_mini"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showShadow="false"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>


    <TextView
        android:id="@+id/fragment_task_add_attachment_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_toLeftOf="@id/fragment_task_add_attachment"
        android:layout_toStartOf="@id/fragment_task_add_attachment"
        android:layout_alignParentBottom="true"
        android:textColor="@color/gray_700"
        android:lines="1"
        android:textSize="14sp"
        android:visibility="invisible"
        />
</RelativeLayout>